# whisper

./: pyproject.toml
src/sussu/: cli.py
sussu-main/: LICENSE.txt  README.md
sussu-main/src/sussu/: basic_logger.py
